# empower-plant

./: .gitattributes  .gitignore  .gitingore  CONTRIBUTING.md
.github/workflows/: rust.yml
docs/: architecture.md  event_catalog.md
kafka/: docker-compose.yml
kafka/topics/: user_management_events.txt
server/: Cargo.toml
server/src/: kafka_integration_tests.rs  main.rs
server/src/config/: kafka.rs
server/src/consumers/: mod.rs  user_events_consumer.rs
server/src/producers/: mod.rs  user_events_producer.rs
