[package]
name = "user_management_system"
version = "0.1.0"
edition = "2018"

# Dependencies
[dependencies]
rdkafka = { version = "0.25", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4" # For handling dates and times, if needed
futures = "0.3"

# This section is for configuring your package to compile with tests
[[test]]
name = "kafka_integration_tests"
path = "kafka_integration_tests.rs"

[features]
default = []
